--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "async"
   ],
   "author": "\"Moises Duarte <gladmd19@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
